adds number and other fixes

--- a/content/settings.json
+++ b/content/settings.json
@@ -21,9 +21,9 @@
     "navigation": {
       "header": [],
       "ctaButton": {
-        "openNewTab": true,
-        "label": "Link",
-        "url": "/resume.pdf"
+        "openNewTab": false,
+        "label": "",
+        "url": ""
       },
       "footer": [
         { "label": "Privacy", "url": "/privacy" },
